ajout bearer swagger gallery + interceptor
