# ApiGateway/docs/swagger.json
@@ -14,6 +14,11 @@
     "paths": {
         "/albums": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Crée un nouvel album avec un titre et un identifiant utilisateur",
                 "consumes": [
                     "application/json"
@@ -60,6 +65,11 @@
         },
         "/albums/private": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Récupère un album privé à partir de son ID",
                 "produces": [
                     "application/json"
@@ -101,6 +111,11 @@
         },
         "/albums/user": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Récupère tous les albums appartenant à un utilisateur donné",
                 "produces": [
                     "application/json"
@@ -142,6 +157,11 @@
         },
         "/albums/{id}": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Met à jour les informations d'un album",
                 "consumes": [
                     "application/json"
@@ -193,6 +213,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Supprime un album existant par son ID",
                 "produces": [
                     "application/json"
@@ -685,6 +710,11 @@
         },
         "/media": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Ajoute un fichier média à un album",
                 "consumes": [
                     "multipart/form-data"
@@ -736,6 +766,11 @@
         },
         "/media/private": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Récupère les médias privés d’un utilisateur",
                 "produces": [
                     "application/json"
@@ -777,6 +812,11 @@
         },
         "/media/similar": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Détecte les fichiers médias similaires à celui donné",
                 "consumes": [
                     "application/json"
@@ -823,6 +863,11 @@
         },
         "/media/user": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Récupère tous les médias appartenant à un utilisateur",
                 "produces": [
                     "application/json"
@@ -864,6 +909,11 @@
         },
         "/media/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Supprime un média par son ID",
                 "produces": [
                     "application/json"
@@ -905,6 +955,11 @@
         },
         "/media/{id}/download": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Télécharge le contenu d’un fichier média",
                 "produces": [
                     "application/octet-stream"
@@ -946,6 +1001,11 @@
         },
         "/media/{id}/private": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Marque un média comme privé",
                 "consumes": [
                     "application/json"
@@ -973,52 +1033,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/proto.MarkAsPrivateResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Requête invalide",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Erreur serveur",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/users": {
-            "post": {
-                "description": "Crée un nouvel utilisateur avec les informations fournies",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Utilisateurs"
-                ],
-                "summary": "Créer un utilisateur",
-                "parameters": [
-                    {
-                        "description": "Données de l'utilisateur",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/proto.CreateUserRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/proto.CreateUserResponse"
                         }
                     },
                     "400": {
@@ -1078,25 +1092,6 @@
             }
         },
         "proto.CreateAlbumResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "proto.CreateUserRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "proto.CreateUserResponse": {
             "type": "object",
             "properties": {
                 "message": {
